# hololense_praktikum

./: CMakeLists.txt  README.md
data/: left_hand_60_times_right_hand_right_swipe_gesture_2022-05-24-10-19-32.csv  tf_60_times_right_hand_right_swipe_gesture_2022-05-24-10-19-32.csv
data/whole_dataset_60_times_right_hand_right_swipe_gesture_2022-05-24-10-19-32/: 60_times_right_hand_right_swipe_gesture_2022-05-24-10-19-32---0.csv  60_times_right_hand_right_swipe_gesture_2022-05-24-10-19-32---1.csv  60_times_right_hand_right_swipe_gesture_2022-05-24-10-19-32---10.csv  60_times_right_hand_right_swipe_gesture_2022-05-24-10-19-32---11.csv  60_times_right_hand_right_swipe_gesture_2022-05-24-10-19-32---12.csv  60_times_right_hand_right_swipe_gesture_2022-05-24-10-19-32---13.csv  60_times_right_hand_right_swipe_gesture_2022-05-24-10-19-32---14.csv  60_times_right_hand_right_swipe_gesture_2022-05-24-10-19-32---15.csv  60_times_right_hand_right_swipe_gesture_2022-05-24-10-19-32---16.csv  60_times_right_hand_right_swipe_gesture_2022-05-24-10-19-32---17.csv  60_times_right_hand_right_swipe_gesture_2022-05-24-10-19-32---18.csv  60_times_right_hand_right_swipe_gesture_2022-05-24-10-19-32---19.csv  60_times_right_hand_right_swipe_gesture_2022-05-24-10-19-32---2.csv  60_times_right_hand_right_swipe_gesture_2022-05-24-10-19-32---20.csv  60_times_right_hand_right_swipe_gesture_2022-05-24-10-19-32---21.csv  60_times_right_hand_right_swipe_gesture_2022-05-24-10-19-32---22.csv  (+48 more)
scripts/: bag_to_csv.py  hololense_subscriber_node.py  visualize_recorded_data_node.py
